feat: mejorar manejo de notificaciones y actualizar modelos de usuario y rol
