# src/swagger.json
@@ -217,8 +217,7 @@
 					"email",
 					"dniType",
 					"password",
-					"rolId",
-					"receiveNotification"
+					"rolId"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -259,6 +258,14 @@
 					"limit": {
 						"type": "number",
 						"format": "double"
+					},
+					"email": {
+						"type": "string",
+						"nullable": true
+					},
+					"role": {
+						"type": "string",
+						"nullable": true
 					},
 					"name": {
 						"type": "string",
@@ -330,59 +337,157 @@
 					}
 				]
 			},
-			"Pick_IUserAttributes.id_": {
+			"Pick_IUserAttributes.id-or-rolId_": {
 				"properties": {
 					"id": {
 						"type": "string"
+					},
+					"rolId": {
+						"type": "string"
 					}
 				},
+				"required": [
+					"rolId"
+				],
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Pick_IUserAttributes.Exclude_keyofIUserAttributes.password-or-avatar-or-location-or-lastName-or-dni-or-dniType-or-phoneNumber-or-receiveNotification-or-dob-or-name-or-email__": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"rolId": {
+						"type": "string"
+					},
+					"status": {
+						"type": "boolean"
+					},
+					"tokenPush": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"deletedAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"rolId"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_IUserAttributes.password-or-avatar-or-location-or-lastName-or-dni-or-dniType-or-phoneNumber-or-receiveNotification-or-dob-or-name-or-email_": {
+				"$ref": "#/components/schemas/Pick_IUserAttributes.Exclude_keyofIUserAttributes.password-or-avatar-or-location-or-lastName-or-dni-or-dniType-or-phoneNumber-or-receiveNotification-or-dob-or-name-or-email__",
+				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"IUserUpdatenAttributes": {
 				"allOf": [
 					{
-						"$ref": "#/components/schemas/Pick_IUserAttributes.id_"
+						"$ref": "#/components/schemas/Pick_IUserAttributes.id-or-rolId_"
 					},
 					{
-						"$ref": "#/components/schemas/Partial_Pick_IUserAttributes.name__"
-					},
-					{
-						"properties": {
-							"receiveNotification": {
-								"type": "boolean"
-							},
-							"phoneNumber": {
-								"type": "string",
-								"nullable": true
-							},
-							"dniType": {
-								"type": "string"
-							},
-							"dni": {
-								"type": "number",
-								"format": "double",
-								"nullable": true
-							},
-							"lastName": {
-								"type": "string",
-								"nullable": true
-							},
-							"location": {
-								"type": "string",
-								"nullable": true
-							},
-							"avatar": {
-								"type": "string",
-								"nullable": true
-							}
-						},
-						"required": [
-							"dniType"
-						],
-						"type": "object"
+						"$ref": "#/components/schemas/Omit_IUserAttributes.password-or-avatar-or-location-or-lastName-or-dni-or-dniType-or-phoneNumber-or-receiveNotification-or-dob-or-name-or-email_"
 					}
 				]
+			},
+			"IRolAttributes": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"deletedAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"name"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IResponseAllRol": {
+				"properties": {
+					"total": {
+						"type": "number",
+						"format": "double"
+					},
+					"totalPage": {
+						"type": "number",
+						"format": "double"
+					},
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/IRolAttributes"
+						},
+						"type": "array"
+					},
+					"actualPage": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"data"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IRolFilter": {
+				"properties": {
+					"pag": {
+						"type": "number",
+						"format": "double"
+					},
+					"limit": {
+						"type": "number",
+						"format": "double"
+					},
+					"name": {
+						"type": "string",
+						"nullable": true
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Pick_IRolAttributes.id-or-name_": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"IRolCreationAttributes": {
+				"$ref": "#/components/schemas/Pick_IRolAttributes.id-or-name_"
 			},
 			"IProductAttributes": {
 				"properties": {
@@ -1249,10 +1354,7 @@
 			},
 			"Partial_Pick_IOrderAttributes.userId-or-dniType-or-dni-or-date-or-amount-or-amountWithoutTax-or-valueTax-or-location-or-nameClient-or-phoneNumber__": {
 				"properties": {
-					"userId": {
-						"type": "string"
-					},
-					"dniType": {
+					"location": {
 						"type": "string"
 					},
 					"dni": {
@@ -1265,6 +1367,15 @@
 								"format": "double"
 							}
 						]
+					},
+					"dniType": {
+						"type": "string"
+					},
+					"phoneNumber": {
+						"type": "string"
+					},
+					"userId": {
+						"type": "string"
 					},
 					"date": {
 						"type": "string"
@@ -1281,13 +1392,7 @@
 						"type": "number",
 						"format": "double"
 					},
-					"location": {
-						"type": "string"
-					},
 					"nameClient": {
-						"type": "string"
-					},
-					"phoneNumber": {
 						"type": "string"
 					}
 				},
@@ -1429,7 +1534,7 @@
 							{
 								"type": "boolean",
 								"enum": [
-									false
+									true
 								]
 							}
 						]
@@ -1502,7 +1607,17 @@
 						"type": "string"
 					},
 					"isView": {
-						"type": "boolean"
+						"anyOf": [
+							{
+								"type": "boolean"
+							},
+							{
+								"type": "boolean",
+								"enum": [
+									true
+								]
+							}
+						]
 					}
 				},
 				"type": "object",
@@ -2869,6 +2984,22 @@
 					},
 					{
 						"in": "query",
+						"name": "email",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "role",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
 						"name": "name",
 						"required": false,
 						"schema": {
@@ -2981,7 +3112,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/IUserCreationAttributes"
+								"$ref": "#/components/schemas/IUserUpdatenAttributes"
 							}
 						}
 					}
@@ -3084,6 +3215,296 @@
 				"summary": "Eliminar un usuario por ID.",
 				"tags": [
 					"User"
+				],
+				"security": [
+					{
+						"bearerAuth": [
+							"admin"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"description": "- ID de usuario a eliminar.",
+						"in": "path",
+						"name": "key",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/rols/show/{rolId}": {
+			"get": {
+				"operationId": "Get",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										},
+										"data": {
+											"allOf": [
+												{
+													"$ref": "#/components/schemas/IRolAttributes"
+												}
+											],
+											"nullable": true
+										}
+									},
+									"required": [
+										"data"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Rol"
+				],
+				"security": [
+					{
+						"bearerAuth": [
+							"admin"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "rolId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/rols/all": {
+			"get": {
+				"operationId": "All",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										},
+										"data": {
+											"anyOf": [
+												{
+													"items": {
+														"$ref": "#/components/schemas/IRolAttributes"
+													},
+													"type": "array"
+												},
+												{
+													"$ref": "#/components/schemas/IResponseAllRol"
+												}
+											]
+										}
+									},
+									"required": [
+										"data"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"summary": "Obtener todos los datos con paginación.",
+				"tags": [
+					"Rol"
+				],
+				"security": [
+					{
+						"bearerAuth": [
+							"admin"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "pag",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "name",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/rols/create": {
+			"post": {
+				"operationId": "Create",
+				"responses": {
+					"201": {
+						"description": "Created",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/IRolAttributes"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Rol"
+				],
+				"security": [
+					{
+						"bearerAuth": [
+							"admin"
+						]
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/IRolCreationAttributes"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/rols/update/{rolId}": {
+			"put": {
+				"operationId": "Update",
+				"responses": {
+					"200": {
+						"description": "Update",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										},
+										"item": {
+											"allOf": [
+												{
+													"$ref": "#/components/schemas/IRolAttributes"
+												}
+											],
+											"nullable": true
+										},
+										"success": {
+											"type": "boolean"
+										}
+									},
+									"required": [
+										"item",
+										"success"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Rol"
+				],
+				"security": [
+					{
+						"bearerAuth": [
+							"admin"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "rolId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/IRolCreationAttributes"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/rols/deleted/{key}": {
+			"delete": {
+				"operationId": "SoftDeleteRecord",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										},
+										"success": {
+											"type": "boolean"
+										}
+									},
+									"required": [
+										"success"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"summary": "Eliminar un usuario por ID.",
+				"tags": [
+					"Rol"
 				],
 				"security": [
 					{
@@ -5436,9 +5857,7 @@
 						"in": "query",
 						"name": "isView",
 						"required": false,
-						"schema": {
-							"type": "boolean"
-						}
+						"schema": {}
 					}
 				]
 			}
